[tool.poetry]
name = "pyrun"
version = "0.1.0"
description = "This a Game thats build using pygames"
authors = ["winter_x64 <75623356+winter-x64@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
